<resources>
    <string name="app_name">hw4_test</string>
    <string name="title_text">Connect 3.5!</string>
    <string name="start_text">Start!</string>
    <string name="back_text">back</string>
    <string name="quit_text">Quit!</string>
    <string name="settings_title_text">Choose Your Settings</string>
    <string name="player_amount_drop_text">Amount of Players</string>
    <string name="board_size_text">Board Size</string>
    <string name="connections_win_text">Connections to Win</string>


    <string-array name="player_amount">
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="connection_win_amount">
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>


</resources>